--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{with .Page.description}}<meta name="description" content="{{.}}">{{end}}
   {{with .Page.keywords}}<meta name="keywords" content="{{.}}">{{end}}
-  <link rel=alternate type=application/atom+xml href=/feed/ title="Coding Robots Blog Atom Feed">
+  <link rel="alternate" type="application/atom+xml" href="http://sellme.biz/feed/" title="Sellme.biz Feed">
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="/favicon.ico?v=0" />
   <title>{{with .Page.seo_title}}{{.}}{{else}}{{.Page.title}} - {{.Site.Name}}{{if .Page.is_post}}{{end}}{{end}}</title>
