Fix link to github to point to https.

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -85,7 +85,7 @@ layout: default
             <h4 class="list-group-item-heading">Proper Picks</h4>
             <p class="list-group-item-text">Микроиздательство книжек</p>
           </a>
-          <a class="list-group-item" href="http://github.com/dchest">
+          <a class="list-group-item" href="https://github.com/dchest">
             <h4 class="list-group-item-heading">github.com/dchest</h4>
             <p class="list-group-item-text">Мои открытые проекты на Гитхабе</p>
           </a>
