GA campaign tracking for sidebar links to my projects.

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -73,15 +73,15 @@ layout: default
         Мои проекты
       </div>
         <div class="list-group">
-          <a class="list-group-item" href="http://www.codingrobots.com/memoires/">
+          <a class="list-group-item" href="http://www.codingrobots.com/memoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Mémoires</h4>
             <p class="list-group-item-text">Программа для ведения дневников</p>
           </a>
-          <a class="list-group-item" href="http://www.codingrobots.com/videomemoires/">
+          <a class="list-group-item" href="http://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Video Mémoires</h4>
             <p class="list-group-item-text">Программа для видео-дневников</p>
           </a>
-          <a class="list-group-item" href="http://www.properpicks.com">
+          <a class="list-group-item" href="http://www.properpicks.com/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Proper Picks</h4>
             <p class="list-group-item-text">Микроиздательство книжек</p>
           </a>
