--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -13,15 +13,19 @@ layout: default
       <div class="panel-body">
         <div class="avatar pull-right">
           <a href="/about.html">
-            <img src="/img/dchest.jpg" alt="Фото автора" width="90" height="90" class="img-circle">
+            <img src="/img/dchest.jpg" alt="Фото автора" width="80" height="80" class="img-circle">
           </a>
         </div>
 
         <p><a href="/about.html">Об авторе и контакты <i class="fa fa-angle-right"></i></a></p>
-        <p><a
-          class="btn btn-default btn-donate"
-          href="https://coinbase.com/checkouts/b31ea1c3fb4f1ad25d416ed20ea18ec7"
-          target="_blank"><i class="fa fa-2x fa-bitcoin pull-left"></i> Поддержать<br>биткоинами</a></p>
+        <p class="text-muted">Поддержать проект:</p>
+        <ul class="list-unstyled fa-ul fa-ul-nospace">
+          <li><a href="https://coinbase.com/checkouts/b31ea1c3fb4f1ad25d416ed20ea18ec7">
+            <i class="fa fa-li fa-bitcoin fa-bitcoin-color"></i> биткоинами</a>
+          </li>
+          <li><a href="http://www.dreamhost.com/donate.cgi?id=17540">
+            <i class="fa fa-li fa-usd fa-usd-color"></i> PayPal прямо на хостинг</a>
+          </li>
       </div>
     </div>
     <div class="clearfix"></div>
