--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -30,7 +30,7 @@ layout: default
         <div id="donatometer"
          class="progress" style="height: 18px;"
          data-toggle="tooltip" data-placement="bottom"
-         data-title="<b>Хостинг стоит $119.40 в год.</b> Деньги с PayPal идут сразу к хостеру. <span style='color:#ccc'>(Кроме Sellme.biz, на том же аккаунте хостятся еще несколько моих проектов.)</span>"
+         data-title="<b>Хостинг стоит $119.40 в год.</b> Деньги с PayPal идут сразу к хостеру. <span style='color:#ccc'>(Кроме Sellme.biz, на том же аккаунте хостятся еще несколько моих проектов.)<br>Этот индикатор обновляется вручную, с задержкой.</span>"
         >
           <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="119.40" style="width: 8.375%">
             <span style="color: rgba(255,255,255,0.8); font-size: 11px">$10</span>
