Add rel=author on name in copyright and link to G+ from About page.
This is needed to enable my name in Google SERP rich snippets.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -26,7 +26,7 @@
 
 <div id="footer">
   <ul class="list-inline" style="padding-top: 16px">
-    <li>&copy; 2005-{{.Site.Date.Format "2006"}} <a href="/about.html">{{.Site.Author}}</a>.</li>
+    <li>&copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a>.</li>
     <li><a href="/terms.html">Условия и лицензия</a></li>
     <li><a href="https://github.com/dchest/sellme.biz">Исходники на GitHub</a></li>
   </ul>
