New, more recent avatar.

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -13,7 +13,7 @@ layout: default
       <div class="panel-body">
         <div class="avatar pull-right">
           <a href="/about.html">
-            <img src="/img/dchest.jpg" alt="Фото автора" width="80" height="80" class="img-circle">
+            <img src="/img/dchest-feb-2014.jpg" alt="Фото автора" width="80" height="80" class="img-circle">
           </a>
         </div>
 
