--- a/includes/analytics.html
+++ b/includes/analytics.html
@@ -1,8 +1,8 @@
 <script>
   //
-  // Do not include Analytics on .onion domain (Tor mirror).
+  // Do not include Analytics on localhost or .onion domain (Tor mirror).
   //
-  if (!document.domain.match(/\.onion$/)) {
+  if (!document.domain.match(/(^localhost)|(\.onion)$/)) {
 
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
