--- a/layouts/default.html
+++ b/layouts/default.html
@@ -26,9 +26,15 @@
   <ul class="list-inline" style="padding-top: 16px">
     <li>&copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a>.</li>
     <li><a href="/terms.html">Условия и лицензия</a></li>
-    <li><a href="https://github.com/dchest/sellme.biz">Исходники на GitHub</a></li>
+    <li><a href="https://github.com/dchest/sellme.biz">Исходники</a></li>
+    <li><a href="http://sellme3uwy224etv.onion/" data-toggle="tooltip" class="tor-link" title="Зеркало в Tor (hidden service). Открывается через Tor-клиент.">sellme3uwy224etv.onion</a>
   </ul>
 </div><!-- /footer -->
 </div>
+<script>
+  $(function() {
+    $('a[data-toggle="tooltip"]').tooltip();
+  });
+</script>
 </body>
 </html>
