New Tor address: sellmefmabkgispl.onion. Yeah...

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -27,7 +27,7 @@
     <li>&copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a>.</li>
     <li><a href="/terms.html">Условия и лицензия</a></li>
     <li><a href="https://github.com/dchest/sellme.biz">Исходники</a></li>
-    <li><a href="http://sellme3uwy224etv.onion/" data-toggle="tooltip" class="tor-link" title="Зеркало в Tor (hidden service). Открывается через Tor-клиент.">sellme3uwy224etv.onion</a>
+    <li><a href="http://sellmefmabkgispl.onion/" data-toggle="tooltip" class="tor-link" title="Зеркало в Tor (hidden service). Открывается через Tor-клиент.">sellmefmabkgispl.onion</a>
   </ul>
 </div><!-- /footer -->
 </div>
