--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,7 +11,6 @@
   <link rel="shortcut icon" href="/favicon.ico?v=0" />
   <title>{{with .Page.seo_title}}{{.}}{{else}}{{.Page.title}} - {{.Site.Name}}{{if .Page.is_post}}{{end}}{{end}}</title>
   <link href="{{asset "global-css"}}" rel="stylesheet" type="text/css">
-  <script src="{{asset "libs-js"}}"></script>
 </head>
 <body>
 {{include "analytics.html"}}
@@ -31,10 +30,18 @@
   </ul>
 </div><!-- /footer -->
 </div>
+<script src="{{asset "libs-js"}}"></script>
 <script>
   $(function() {
     $('a[data-toggle="tooltip"]').tooltip();
+    $('a[data-toggle="popover"]').popover();
   });
+
+  function permalinkFocusHandler(that) {
+    window.setTimeout(function() {
+     $(that).select();
+    }, 100);
+  }
 </script>
 </body>
 </html>
