--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -18,15 +18,13 @@ layout: default
         </div>
 
         <p><a href="/about.html">Об авторе и контакты <i class="fa fa-angle-right"></i></a></p>
-        <p class="text-muted">Поддержать проект:</p>
-        <ul class="list-unstyled fa-ul fa-ul-nospace">
-          <li><a href="https://coinbase.com/checkouts/b31ea1c3fb4f1ad25d416ed20ea18ec7">
-            <i class="fa fa-li fa-bitcoin fa-bitcoin-color"></i> биткоинами</a>
-          </li>
-          <li><a href="http://www.dreamhost.com/donate.cgi?id=17540">
-            <i class="fa fa-li fa-usd fa-usd-color"></i> PayPal прямо на хостинг</a>
-          </li>
-        </ul>
+        <p class="text-muted">Поддержать проект<br>
+          <a href="https://coinbase.com/checkouts/b31ea1c3fb4f1ad25d416ed20ea18ec7">
+          <i class="fa fa-bitcoin fa-bitcoin-color"></i> биткоинами</a>.
+        </p>
+        <p class="text-muted">Хостинг:<br>
+        <a href="https://www.digitalocean.com/?refcode=d513c3a28ff3">Digital Ocean</a>.
+        </p>
       </div>
     </div>
     <div class="clearfix"></div>
