--- a/layouts/post.html
+++ b/layouts/post.html
@@ -10,7 +10,7 @@ layout: blog
 
   <div class="blog-post-meta">
     <div class="blog-post-date"><i class="fa fa-calendar"></i> {{.Page.date.Format "02.01.2006"}}</div>
-    <div class="social-likes" data-counters="no">
+    <div class="social-likes social-likes_light" data-counters="no">
       <div class="facebook" title="Поделиться ссылкой на Фейсбуке"></div>
       <div class="twitter" data-via="sellmebiz" title="Поделиться ссылкой в Твиттере"></div>
       <div class="vkontakte" title="Поделиться ссылкой во Вконтакте"></div>
