--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -187,7 +187,7 @@ label {
 
 .social-likes_light .social-likes__button, .social-likes_single-light+.social-likes__button {
   padding-left: 4px;
-/*  padding-bottom: 4px;*/
+  padding-bottom: 4px;
   font-size: 11px;
 }
 
