--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -18,13 +18,21 @@ layout: default
         </div>
 
         <p><a href="/about.html">Об авторе и контакты <i class="fa fa-angle-right"></i></a></p>
-        <p class="text-muted">Поддержать проект<br>
-          <a href="https://coinbase.com/checkouts/b31ea1c3fb4f1ad25d416ed20ea18ec7">
-          <i class="fa fa-bitcoin fa-bitcoin-color"></i> биткоинами</a>.
+        <p class="text-muted">Адрес сайта в Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:<br>
+          <a class="tor-link"  href="http://sellmefmabkgispl.onion/" data-toggle="tooltip" title="Ссылка открывается через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
-        <p class="text-muted">Хостинг:<br>
-        <a href="https://www.digitalocean.com/?refcode=d513c3a28ff3">Digital Ocean</a>.
+
+        <p class="text-muted">Поддержать проект <a href="https://bitcoin.org/ru/" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:<br>
+           <i class="fa fa-bitcoin bitcoin-color"></i>
+           <a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">
+           1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
+          </a>
         </p>
+
+        <p class="text-muted">Хостинг (рекомендую):<br>
+          <a href="https://www.digitalocean.com/?refcode=d513c3a28ff3">Digital Ocean</a>
+        </p>
+
       </div>
     </div>
     <div class="clearfix"></div>
@@ -66,7 +74,7 @@ layout: default
           <a class="list-group-item" href="{{.Site.Properties.urls.twitter}}">
             <i class="fa fa-lg fa-twitter twitter-color"></i> Твиттер
             <span class="text-muted">@{{.Site.Properties.twitter_name}}</span>
-          </a> 
+          </a>
       </div>
     </div>
 
