Keep sidebar, with a smaller font size, on tables.

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-sm-8">
 
     {{.Content}}
 
   </div>
 
-  <div class="col-md-4 blog-sidebar">
+  <div class="col-sm-4 blog-sidebar">
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="avatar pull-right">
@@ -18,12 +18,12 @@ layout: default
         </div>
 
         <p><a href="/about.html">Об авторе и контакты <i class="fa fa-angle-right"></i></a></p>
-        <p class="text-muted">Адрес сайта в Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:<br>
+        <p class="text-muted">Адрес сайта в <span style="white-space: nowrap">Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
           <a class="tor-link"  href="http://sellmefmabkgispl.onion/" data-toggle="tooltip" title="Ссылка открывается через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
 
-        <p class="text-muted">Поддержать проект <a href="https://bitcoin.org/ru/" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:<br>
-           <i class="fa fa-bitcoin bitcoin-color"></i>
+        <p class="text-muted">Поддержать проект <span style="white-space: nowrap"><a href="https://bitcoin.org/ru/" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
+           <i class="fa fa-bitcoin bitcoin-color hidden-sm hidden-xs"></i>
            <a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">
            1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
           </a>
