--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -84,6 +84,12 @@ blockquote {
   }
 }
 
+@media (max-width: 992px) {
+  .blog-sidebar {
+    font-size: 14px;
+  }
+}
+
   .blog-sidebar .panel-content,
   .blog-sidebar .list-group-item {
   }
@@ -169,7 +175,7 @@ label {
 }
 
 .blog-post-date {
-  display: inline-block;  
+  display: inline-block;
   padding-top: 1px;
   line-height: 1;
   margin-right: 16px;
@@ -245,5 +251,18 @@ a.tor-link {
 
 a.bitcoin-link {
   color: #b8860b;
-  font-size: 13px;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    a.bitcoin-link {
+      font-size: 10px;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  a.bitcoin-link {
+    font-size: 13px;
+  }
 }
