Lots of fixes for old posts, mostly broken links.

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -63,7 +63,7 @@ layout: default
         </div><!-- close panel body, list goes under -->
 
         <div class="list-group">
-          <a class="list-group-item" href="http://sellme.biz/feed/">
+          <a class="list-group-item" href="/feed/">
             <i class="fa fa-lg fa-rss-square" style="color:#4374e0"></i> RSS лента
             <!--
             <img src="http://feeds.feedburner.com/~fc/SellMe?bg=ffffff&amp;fg=000000&amp;anim=0"
