Get rid of most of inline JavaScript.
This is a work-in-progress to remove 'unsafe-inline' from
Content-Security-Policy.

Still left:

 - pages/password/ and pages/password2/

   We need to exclude these locations from CSP, because they are
   one-file HTML+JS things, which use inline JS.

 - Google Analytics:

   While in a separate JS file (assets/js/google-analytics.js), it still
   loads external JS by putting "<script>" into DOM, which is not
   allowed with CSP if we remove 'unsafe-inline'. We could just do
   <script src="https://www.google-analytics.com/analytics.js"></script>
   but we load Analytics conditionally, dynamically, to be able to
   exclude it from localhost (not important) and .onion domains.
   We should figure out how to statically exclude it from .onion without
   having two copies of the website for .biz and .onion.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -13,7 +13,6 @@
   <link href="{{asset "global-css"}}" rel="stylesheet" type="text/css">
 </head>
 <body>
-{{include "analytics.html"}}
 <div class="container">
 <div id="header">
   <h1><a href="/">{{.Site.Name}}</a>{{with .Site.Properties.tagline}} <span class="tagline">{{.}}</span>{{end}}</h1>
@@ -29,18 +28,6 @@
   </ul>
 </div><!-- /footer -->
 </div>
-<script src="{{asset "libs-js"}}"></script>
-<script>
-  $(function() {
-    $('a[data-toggle="tooltip"]').tooltip();
-    $('a[data-toggle="popover"]').popover();
-  });
-
-  function permalinkFocusHandler(that) {
-    window.setTimeout(function() {
-     $(that).select();
-    }, 100);
-  }
-</script>
+<script src="{{asset "global-js"}}"></script>
 </body>
 </html>
