Use /maybe-google-analytics.js to either redirect to real Google Analytics for .biz or return empty file for .onion. This way we "dynamically" load Google Analytics for different domains, but without any inline JavaScript. This allows us to remove 'unsafe-inline' Content Security Policy (we did).

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -29,5 +29,6 @@
 </div><!-- /footer -->
 </div>
 <script src="{{asset "global-js"}}"></script>
+<script src="/maybe-google-analytics.js"></script>
 </body>
 </html>
