Remove javascript:void(0) from link.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -181,6 +181,10 @@ label {
   margin-right: 16px;
 }
 
+.blog-post-date a {
+  cursor: pointer;
+}
+
 .permalink-popover {
   font-family: "PT Sans", sans-serif;
   font-size: 14px;
