--- a/layouts/default.html
+++ b/layouts/default.html
@@ -29,6 +29,6 @@
 </div><!-- /footer -->
 </div>
 <script src="{{asset "global-js"}}"></script>
-<script src="/maybe-google-analytics.js"></script>
+<script src="/maybe-google-analytics.js" async></script>
 </body>
 </html>
