Add StableLib to sidebar

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -84,9 +84,9 @@ layout: default
         Мои проекты
       </div>
         <div class="list-group">
-          <a class="list-group-item" href="http://www.codingrobots.com/journalite/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
-            <h4 class="list-group-item-heading">Journalite <span class="label label-danger">New</span><i class="fa fa-windows text-muted pull-right"></i></h4>
-            <p class="list-group-item-text">Программа для ведения дневников и журналов в Windows</p>
+          <a class="list-group-item" href="https://stablelib.com/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+            <h4 class="list-group-item-heading">StableLib <span class="label label-danger">New</span></h4>
+            <p class="list-group-item-text">Стабильные пакеты Go с долгой поддержкой</p>
           </a>
           <a class="list-group-item" href="http://www.codingrobots.com/memoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Mémoires <i class="fa fa-apple text-muted pull-right"></i></h4>
@@ -95,6 +95,10 @@ layout: default
           <a class="list-group-item" href="http://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Video Mémoires <i class="fa fa-apple text-muted pull-right"></i></h4>
             <p class="list-group-item-text">Программа для ведения видео-дневников на Маке</p>
+          </a>
+          <a class="list-group-item" href="http://www.codingrobots.com/journalite/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+            <h4 class="list-group-item-heading">Journalite <i class="fa fa-windows text-muted pull-right"></i></h4>
+            <p class="list-group-item-text">Программа для ведения дневников и журналов в Windows</p>
           </a>
           <a class="list-group-item" href="http://www.properpicks.com/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Proper Picks</h4>
