Load Google Analytics by inserting <script>.
Looks like CSP doesn't prevent us from adding <script src=...> elements
with the srcs we allow.

Do not load Analytics on .onion domains.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -28,7 +28,6 @@
   </ul>
 </div><!-- /footer -->
 </div>
-<script src="{{asset "global-js"}}"></script>
-<script src="/maybe-google-analytics.js" async></script>
+<script src="{{asset "analytics-js"}}"></script>
 </body>
 </html>
