Add "async" attr to script.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -28,6 +28,6 @@
   </ul>
 </div><!-- /footer -->
 </div>
-<script src="{{asset "analytics-js"}}"></script>
+<script src="{{asset "analytics-js"}}" async></script>
 </body>
 </html>
