--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="referrer" content="none">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{with .Page.description}}<meta name="description" content="{{.}}">{{end}}
   {{with .Page.keywords}}<meta name="keywords" content="{{.}}">{{end}}
