Replace bitcoin.org link with link to Wikipedia article about Bitcoin

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -22,7 +22,7 @@ layout: default
           <a class="tor-link hint--bottom"  href="http://sellmefmabkgispl.onion/" data-hint="Ссылка открывается через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
 
-        <p class="text-muted">Поддержать проект <span style="white-space: nowrap"><a href="https://bitcoin.org/ru/" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
+        <p class="text-muted">Поддержать проект <span style="white-space: nowrap"><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D1%82%D0%BA%D0%BE%D0%B9%D0%BD" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
            <i class="fa fa-bitcoin bitcoin-color hidden-sm hidden-xs"></i>
            <a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">
            1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
