--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -19,7 +19,7 @@ layout: default
 
         <p><a href="/about.html">Об авторе и контакты <i class="fa fa-angle-right"></i></a></p>
         <p class="text-muted">Адрес сайта в <span style="white-space: nowrap">Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
-          <a class="tor-link hint--bottom"  href="http://sellmefmabkgispl.onion/" data-hint="Ссылка открывается через Tor-клиент.">sellmefmabkgispl.onion</a>
+          <a class="tor-link hint--bottom"  href="http://sellmefmabkgispl.onion/" data-hint="Ссылку открывать через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
 
         <p class="text-muted">Поддержать проект <span style="white-space: nowrap"><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D1%82%D0%BA%D0%BE%D0%B9%D0%BD" target="_blank"><i class="fa fa-info-circle info-color"></i></a>:</span><br>
