Change links to projects to https://

--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -80,19 +80,19 @@ layout: default
         Мои проекты
       </div>
         <div class="list-group">
-          <a class="list-group-item" href="http://www.codingrobots.com/memoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+          <a class="list-group-item" href="https://www.codingrobots.com/memoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Mémoires</i></h4>
           <p class="list-group-item-text">Программа для ведения дневников и журналов на Маке</p>
           </a>
-          <a class="list-group-item" href="http://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+          <a class="list-group-item" href="https://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Video Mémoires</h4>
             <p class="list-group-item-text">Программа для ведения видео-дневников на Маке</p>
           </a>
-          <a class="list-group-item" href="http://www.codingrobots.com/journalite/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+          <a class="list-group-item" href="https://www.codingrobots.com/journalite/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Journalite</h4>
             <p class="list-group-item-text">Программа для ведения дневников и журналов в Windows</p>
           </a>
-          <a class="list-group-item" href="http://www.properpicks.com/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
+          <a class="list-group-item" href="https://www.properpicks.com/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">
             <h4 class="list-group-item-heading">Proper Picks</h4>
             <p class="list-group-item-text">Микроиздательство книжек</p>
           </a>
