--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -2,32 +2,32 @@
 layout: default
 ---
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col c8">
 
     {{.Content}}
 
   </div>
 
-  <div class="col-sm-4 blog-sidebar">
+  <div class="col c4 blog-sidebar">
     <div class="panel panel-default">
       <div class="panel-body">
-        <div class="avatar pull-right">
+        <div class="avatar">
           <a href="/about.html">
-            <img src="/img/dchest-oct-2015.jpg" alt="Фото автора" width="80" height="80" class="img-circle">
+            <img src="/img/dchest-oct-2015.jpg" alt="Фото автора" width="80" height="80">
           </a>
         </div>
 
         <p><a href="/about.html">Об авторе и контакты</a></p>
-        <p class="text-muted">Адрес сайта в <span style="white-space: nowrap">Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
+        <p class="gray">Адрес сайта в <span style="white-space: nowrap">Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
           <a class="tor-link hint--bottom"  href="http://sellmefmabkgispl.onion/" data-hint="Ссылку открывать через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
 
-        <p class="text-muted">Поддержать проект <span style="white-space: nowrap"><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D1%82%D0%BA%D0%BE%D0%B9%D0%BD" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
-           <svg class="bitcoin-color hidden-sm hidden-xs" style="vertical-align: text-bottom; margin-left: -3px" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1423 640q18 182-131 258 117 28 175 103t45 214q-7 71-32.5 125t-64.5 89-97 58.5-121.5 34.5-145.5 15v255h-154v-251q-80 0-122-1v252h-154v-255q-18 0-54-.5t-55-.5h-200l31-183h111q50 0 58-51v-402h16q-6-1-16-1v-287q-13-68-89-68h-111v-164l212 1q64 0 97-1v-252h154v247q82-2 122-2v-245h154v252q79 7 140 22.5t113 45 82.5 78 36.5 114.5zm-215 545q0-36-15-64t-37-46-57.5-30.5-65.5-18.5-74-9-69-3-64.5 1-47.5 1v338q8 0 37 .5t48 .5 53-1.5 58.5-4 57-8.5 55.5-14 47.5-21 39.5-30 24.5-40 9.5-51zm-71-476q0-33-12.5-58.5t-30.5-42-48-28-55-16.5-61.5-8-58-2.5-54 1-39.5.5v307q5 0 34.5.5t46.5 0 50-2 55-5.5 51.5-11 48.5-18.5 37-27 27-38.5 9-51z"/></svg><a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
+        <p class="gray">Поддержать проект <span style="white-space: nowrap"><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D1%82%D0%BA%D0%BE%D0%B9%D0%BD" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
+           <svg class="bitcoin-color hidden-sm" style="vertical-align: text-bottom; margin-left: -3px" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1423 640q18 182-131 258 117 28 175 103t45 214q-7 71-32.5 125t-64.5 89-97 58.5-121.5 34.5-145.5 15v255h-154v-251q-80 0-122-1v252h-154v-255q-18 0-54-.5t-55-.5h-200l31-183h111q50 0 58-51v-402h16q-6-1-16-1v-287q-13-68-89-68h-111v-164l212 1q64 0 97-1v-252h154v247q82-2 122-2v-245h154v252q79 7 140 22.5t113 45 82.5 78 36.5 114.5zm-215 545q0-36-15-64t-37-46-57.5-30.5-65.5-18.5-74-9-69-3-64.5 1-47.5 1v338q8 0 37 .5t48 .5 53-1.5 58.5-4 57-8.5 55.5-14 47.5-21 39.5-30 24.5-40 9.5-51zm-71-476q0-33-12.5-58.5t-30.5-42-48-28-55-16.5-61.5-8-58-2.5-54 1-39.5.5v307q5 0 34.5.5t46.5 0 50-2 55-5.5 51.5-11 48.5-18.5 37-27 27-38.5 9-51z"/></svg><a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
           </a>
         </p>
 
-        <p class="text-muted">Хостинг (рекомендую):<br>
+        <p class="gray">Хостинг (рекомендую):<br>
           <a href="https://www.digitalocean.com/?refcode=d513c3a28ff3">Digital Ocean</a>
         </p>
 
@@ -43,15 +43,9 @@ layout: default
         <form class="form-inline" action="https://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=SellMe', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true">
           <label for="email"><small>Получать новые посты по почте:</small></label>
 
-
           <div class="input-group">
-            <input class="form-control" type="text" id="email" name="email" value="" placeholder="Адрес электропочты">
-
-            <span class="input-group-btn">
-              <button type=submit name="subscribe" class="btn btn-default">
-                <svg style="vertical-align: text-bottom; fill: #555" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z"/></svg>
-              </button>
-            </div>
+            <input class="form-control" type="text" id="email" name="email" value="" placeholder="Адрес электропочты"><button type=submit name="subscribe" class="btn"><svg style="vertical-align: text-bottom; fill: #fff" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z"/></svg></button>
+          </div>
             <!--hidden-->
             <input type="hidden" value="SellMe" name="uri">
             <input type="hidden" name="loc" value="ru_RU"/>
@@ -69,7 +63,7 @@ layout: default
           <a class="list-group-item" href="{{.Site.Properties.urls.twitter}}">
             <svg class="twitter-color" style="vertical-align: bottom" width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"/></svg>
             Твиттер
-            <span class="text-muted">@{{.Site.Properties.twitter_name}}</span>
+            <span class="gray">@{{.Site.Properties.twitter_name}}</span>
           </a>
       </div>
     </div>
