--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,8 +11,7 @@
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="/favicon.ico?v=1" />
   <title>{{with .Page.seo_title}}{{.}}{{else}}{{.Page.title}} - {{.Site.Name}}{{if .Page.is_post}}{{end}}{{end}}</title>
-  <style>
-  {{asset "global-css"}}
+  <link rel="stylesheet" type="text/css" href="{{asset "global-css"}}">
   </style>
 </head>
 <body>
