--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -346,6 +346,14 @@ label {
   text-decoration: none;
 }
 
+.blog-post-content a:link {
+  text-decoration: underline;
+}
+
+.blog-post-content a:visited {
+  color: #4D00AC;
+}
+
 .blog-post-content img {
   max-width: 100%;
   height: auto;
