Also apply different color for visited links in posts archive.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -350,7 +350,8 @@ label {
   text-decoration: underline;
 }
 
-.blog-post-content a:visited {
+.blog-post-content a:visited,
+.archive a:visited {
   color: #4D00AC;
 }
 
