--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -144,8 +144,11 @@ button.list-group-item:focus {
 }
 
 /* ------- */
+body, textarea, input, select {
+  font-family: "Clear Sans", "Helvetica Neue", Arial, Helvetica, serif;
+}
+
 body {
-  font-family: "Georgia", "PT Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 1.42857143;
 }
@@ -158,7 +161,6 @@ body {
 
 h1, h2, h3, h4, h5, h6,
 #footer, #header {
-  font-family: "Trebuchet MS", "PT Sans", sans-serif;
 }
 
 a:link,
@@ -172,7 +174,7 @@ a:hover {
 }
 
 a.btn {
-  font-family: "Trebuchet MS", "PT Sans", sans-serif;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, Helvetica, serif;
 }
 
 code {
@@ -198,7 +200,7 @@ blockquote {
 
 #header h1 a:link,
 #header h1 a:visited {
-  color: #999;
+  color: #4D00AC;
   text-decoration: none;
 }
 
@@ -225,7 +227,6 @@ blockquote {
 /* Sidebar */
 
 .blog-sidebar {
-  font-family: "Trebuchet MS", "PT Sans", sans-serif;
   font-size: 15px;
   padding: 10px;
   padding-bottom: 0;
@@ -361,12 +362,11 @@ label {
 }
 
 .blog-post-content form {
-  font-family: "Trebuchet MS", "PT Sans", sans-serif;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, Helvetica, serif;
 }
 
 .blog-post-meta {
-  font-family: "Trebuchet MS", "PT Sans", sans-serif;
-  font-size: 13px;
+  font-size: 14px;
   color: #999;
 }
 
@@ -481,10 +481,11 @@ a.bitcoin-link {
 
 .list-share {
   display: inline-block;
+  margin: 0;
 }
 
 .list-share > li {
-  padding: 0 10px 0 0;
+  padding: 0 5px 0 0;
 }
 
 h4.list-group-item-heading {
