--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -10,7 +10,7 @@ layout: default
 
   <div class="col c4 blog-sidebar">
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="panel-body panel-heading-empty">
         <div class="avatar">
           <a href="/about.html">
             <img src="/img/dchest-oct-2015.jpg" alt="Фото автора" width="80" height="80">
@@ -18,16 +18,16 @@ layout: default
         </div>
 
         <p><a href="/about.html">Об авторе и контакты</a></p>
-        <p class="gray">Адрес сайта в <span style="white-space: nowrap">Tor <a href="https://check.torproject.org/?lang=ru" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
+        <p>Адрес сайта в <span style="white-space: nowrap">Tor:</span><br>
           <a class="tor-link hint--bottom"  href="http://sellmefmabkgispl.onion/" data-hint="Ссылку открывать через Tor-клиент.">sellmefmabkgispl.onion</a>
         </p>
 
-        <p class="gray">Поддержать проект <span style="white-space: nowrap"><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D1%82%D0%BA%D0%BE%D0%B9%D0%BD" target="_blank"><svg style="vertical-align: text-bottom; fill: #999" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>:</span><br>
+        <p>Поддержать проект:</span><br>
            <svg class="bitcoin-color hidden-sm" style="vertical-align: text-bottom; margin-left: -3px" width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1423 640q18 182-131 258 117 28 175 103t45 214q-7 71-32.5 125t-64.5 89-97 58.5-121.5 34.5-145.5 15v255h-154v-251q-80 0-122-1v252h-154v-255q-18 0-54-.5t-55-.5h-200l31-183h111q50 0 58-51v-402h16q-6-1-16-1v-287q-13-68-89-68h-111v-164l212 1q64 0 97-1v-252h154v247q82-2 122-2v-245h154v252q79 7 140 22.5t113 45 82.5 78 36.5 114.5zm-215 545q0-36-15-64t-37-46-57.5-30.5-65.5-18.5-74-9-69-3-64.5 1-47.5 1v338q8 0 37 .5t48 .5 53-1.5 58.5-4 57-8.5 55.5-14 47.5-21 39.5-30 24.5-40 9.5-51zm-71-476q0-33-12.5-58.5t-30.5-42-48-28-55-16.5-61.5-8-58-2.5-54 1-39.5.5v307q5 0 34.5.5t46.5 0 50-2 55-5.5 51.5-11 48.5-18.5 37-27 27-38.5 9-51z"/></svg><a class="bitcoin-link" href="bitcoin:1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt">1CAZRtTxTSCGMagD7SM9K1mDqMgR25wgqt
           </a>
         </p>
 
-        <p class="gray">Хостинг (рекомендую):<br>
+        <p>Хостинг (рекомендую):<br>
           <a href="https://www.digitalocean.com/?refcode=d513c3a28ff3">Digital Ocean</a>
         </p>
 
@@ -98,7 +98,7 @@ layout: default
           Последние посты
         </div>
         <div class="panel-body">
-          <ul class="list-unstyled">
+          <ul class="list-unstyled blog-post-list">
             {{range .Site.Posts.Limit 10}}
             <li><a href="{{.Meta.url}}">{{.Meta.title}}</a></li>
             {{end}}
