--- a/layouts/post.html
+++ b/layouts/post.html
@@ -19,3 +19,11 @@ layout: blog
     </ul>
   </div>
 </div>
+
+<h3>Три свежих поста:</h3>
+<ul >
+  {{range .Site.Posts.Limit 3}}
+  <li><a href="{{.Meta.url}}">{{.Meta.title}}</a></li>
+  {{end}}
+  <li><a href="/archive/"><b>Список всех постов</b></a></li>
+</ul>
