--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -33,7 +33,7 @@ code {
 }
 
 blockquote {
-  padding: 10px 20px;
+  padding: 0 20px;
   margin: 0 0 20px;
   border-left: 5px solid #eee;
   font-size: 16px;
