--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -3,7 +3,7 @@
 }
 
 body, textarea, input, select {
-  font: 16px/1.6 "Clear Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font: 16px/1.6 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .container {
