--- a/layouts/default.html
+++ b/layouts/default.html
@@ -14,23 +14,27 @@
   <link rel="stylesheet" type="text/css" href="{{asset "global-css"}}">
 </head>
 <body>
-<div class="container">
-<div id="header">
-  <h1><a href="/">{{.Site.Name}}</a></h1>
-  <a href="/about.html">Кто автор?</a> &#183;
-  <a href="/archive/">Архив</a>  &#183;
-  <a href="/feed/">RSS</a> &#183;
-  <a href="{{.Site.Properties.urls.twitter}}">Твиттер</a> &#183;
-  <a href="https://feedburner.google.com/fb/a/mailverify?uri=SellMe&amp;loc=ru_RU">Подписаться</a>
+<div id="header-wrapper">
+  <header>
+    <h1><a href="/">{{.Site.Name}}</a></h1>
+    <ul>
+      <li><a href="/about.html">Кто автор?</a></li>
+      <li><a href="/archive/">Архив</a></li>
+      <li><a href="https://feedburner.google.com/fb/a/mailverify?uri=SellMe&amp;loc=ru_RU">Подписка</a></li>
+      <li><a href="{{.Site.Properties.urls.twitter}}">Твиттер</a></li>
+    </ul>
+  </header>
 </div>
+<div class="container">
 
 {{.Content }}
 
-<div id="footer">
+<footer>
 
 &copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a>  &#183;
-<a href="/terms.html">Условия и лицензия</a>  &#183;
-<a href="https://github.com/dchest/sellme.biz">Исходники</a>
+<a href="/terms.html">Условия и лицензия</a> &#183;
+<a href="https://github.com/dchest/sellme.biz">Исходники</a> &#183;
+<a href="/feed/" class="rss">RSS</a> &nbsp;
 
 <br>
 
@@ -50,7 +54,7 @@
 -->
 
 
-</div><!-- /footer -->
+</footer>
 </div>
 </body>
 </html>
