Redesign; inline CSS; use semantic tags.

--- a/layouts/page.html
+++ b/layouts/page.html
@@ -1,12 +1,12 @@
 ---
 layout: blog
 ---
-<div class="page">
-  <div class="page-header">
-    <h1>{{.Page.title}}</h1>
-  </div>
+<article class="page">
+  <header>
+    <h1 class="page-header">{{.Page.title}}</h1>
+  </header>
 
   <div class="page-content">
     {{.Content}}
   </div>
-</div>
+</article>
