--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -13,12 +13,6 @@ body, textarea, input, select {
   line-height: 1.6;
 }
 
-.container {
-  max-width: 800px;
-  margin: auto;
-  padding: 15px;
-}
-
 a:link,
 a:visited {
   color: #0D47A1;
@@ -44,129 +38,141 @@ blockquote {
   color: #555;
 }
 
-/* Blog */
+hr {
+  margin: 20px 0;
+  border: 0;
+  border-top: 1px solid #eee;
+}
 
-#header-wrapper {
+address {
+  font-style: normal;
+}
+
+
+main,
+#mf,
+#mh > nav {
+  display: block;
+  max-width: 800px;
+  margin: auto;
+  padding: 15px;
+}
+
+/* Masthead */
+
+#mh {
   border-bottom: 1px solid #eee;
 }
 
-header {
+#mh > nav {
   position: relative;
-  max-width: 800px;
-  margin: auto;
   padding: 5px 15px;
 }
 
-header h1 {
-  margin-right: 20px;
+#mh h1 {
+  position: absolute;
+  display: block;
   font-size: 18px;
   line-height: 1;
-  font-weight: bold;
-  display: block;
-  position: absolute;
-  margin-top: 9px;
+  margin: 9px 20px 0 0;
 }
 
-header h1 a:link,
-header h1 a:visited {
+#mh h1 a:link,
+#mh h1 a:visited {
   text-decoration: none;
-  border-bottom: 0;
 }
 
-header a:link,
-header a:visited {
+#mh a:link,
+#mh a:visited {
   color: #444;
   white-space: nowrap;
   margin-right: 20px;
 }
 
-header ul {
+#mh ul {
   list-style: none;
-  margin: 0;
+  margin: 0 0 0 120px;
   padding: 5px;
-  margin-left: 120px;
 }
 
-header ul > li {
+#mh ul > li {
   display: inline-block;
 }
 
+/* Footer */
 
-footer {
+#mf {
   font-size: 14px;
-  padding: 20px 0;
   clear: both;
 }
 
+a.rss {
+  padding: 2px 4px;
+  background: #FFE0B2;
+  color: #111;
+  border-radius: 3px;
+  font-size: 12px;
+}
+
+
 /* Posts */
 
-.blog-post-content,
+.post-content,
 .page-content {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 17px;
   line-height: 1.5;
 }
 
-.blog-post {
-  margin-top: 0;
-  margin-bottom: 40px;
-  margin-right: 30px;
+.post {
+  margin: 0 30px 40px 0;
 }
 
 .page-header,
-.blog-post-title {
+.post-title {
+  margin: 10px 0 0 0;
+  padding: 0;
   font-size: 38px;
   font-weight: bold;
   letter-spacing: -0.5px;
-  padding: 0;
-  margin: 0;
-  margin-top: 10px;
   line-height: 1.2;
 }
 
-.blog-post-title > a:link,
-.blog-post-title > a:visited {
+.post-title > a:link,
+.post-title > a:visited {
   color: #333;
 }
 
-.blog-post-title > a:hover {
+.post-title > a:hover {
   color: #666;
   text-decoration: none;
 }
 
-.blog-post-content a:link {
+.post-content a:link {
   text-decoration: underline;
 }
 
-.blog-post-content a:visited,
+.post-content a:visited,
 .archive a:visited {
   color: #512DA8;
 }
 
-.blog-post-content img {
+.post-content img {
   max-width: 100%;
   height: auto;
 }
 
-.blog-post-content > p:last-child {
+.post-content > p:last-child {
   margin-bottom: 0;
 }
 
-.blog-post-meta {
+.post-meta {
   font-size: 14px;
   color: #aaa;
   margin-top: 8px;
 }
 
-.blog-post-date {
-  display: inline-block;
-}
-
-.blog-post-date a {
-  cursor: pointer;
-}
-
-.blog-post-date a {
+.post-date a {
   color: #aaa;
   text-decoration: none;
 }
@@ -192,68 +198,10 @@ footer {
   color: #999;
 }
 
-  .comment-date:before {
-    content: ' / ';
-  }
+.comment-date:before {
+  content: ' / ';
+}
 
 .comment-body {
   padding-left: 15px;
-}
-
-/* Page */
-
-.page-header h1 {
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 10px;
-  font-size: 38px;
-  font-weight: bold;
-  letter-spacing: -0.5px;
-}
-
-.page-header {
-  border-bottom: none;
-  padding: 0;
-  margin: 0;
-}
-
-.tor-link {
-  color: #3D9970;
-}
-
-.list-unstyled {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.list-inline {
-  padding-left: 0;
-  margin-left: -5px;
-  list-style: none;
-}
-
-.list-inline > li {
-  display: inline-block;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 0;
-  border-top: 1px solid #eee;
-}
-
-address {
-  font-style: normal;
-}
-
-a.rss {
-  padding: 2px 4px;
-  background: #FFE0B2;
-  color: #111;
-  border-radius: 3px;
-  font-size: 12px;
 }
