--- a/layouts/narrow.html
+++ b/layouts/narrow.html
@@ -1,10 +1,10 @@
 ---
 layout: content
 ---
-<div class="col-md-8 col-md-offset-2">
-  <div class="page-header">
+<article class="col-md-8 col-md-offset-2">
+  <header class="page-header">
     <h1>{{.Page.title}}</h1>
-  </div>
+  </header>
 
   {{.Content}}
-</div>
+</article>
