Make feed link https

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> {{with .Page.description}}
 	<meta name="description" content="{{.}}">{{end}} {{with .Page.keywords}}
 	<meta name="keywords" content="{{.}}">{{end}}
-	<link rel="alternate" type="application/atom+xml" href="http://sellme.biz/feed/" title="Sellme.biz Feed">
+	<link rel="alternate" type="application/atom+xml" href="https://sellme.biz/feed/" title="Sellme.biz Feed">
 	<link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
 	<link rel="shortcut icon" href="/favicon.ico?v=1" />
 	<title>{{with .Page.seo_title}}{{.}}{{else}}{{.Page.title}} - {{.Site.Name}}{{if .Page.is_post}}{{end}}{{end}}</title>
@@ -35,9 +35,9 @@
 	<footer id="mf">
 		Мои другие проекты:
 
-		<a href="https://www.codingrobots.com/memoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">Mémoires</a>		&#183;
+		<a href="https://www.codingrobots.com/memoires/?utm_source=Sellme.biz&amp;utm_medium=sidebar_link&amp;utm_campaign=Sellme.biz">Mémoires</a>		&#183;
 
-		<a href="https://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&utm_medium=sidebar_link&utm_campaign=Sellme.biz">Video Mémoires</a>		&#183;
+		<a href="https://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&amp;utm_medium=sidebar_link&amp;utm_campaign=Sellme.biz">Video Mémoires</a>		&#183;
 
 		<a href="https://github.com/dchest">github.com/dchest</a>
 
