--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -106,12 +106,19 @@ main,
   clear: both;
 }
 
-a.rss {
+a.feed {
   padding: 2px 4px;
-  background: #FFE0B2;
   color: #111;
   border-radius: 3px;
   font-size: 12px;
+}
+
+a.feed.rss {
+    background: #FFE0B2;
+}
+
+a.feed.json {
+    background: #dff5dc;
 }
 
 
