--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,7 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> {{with .Page.description}}
 	<meta name="description" content="{{.}}">{{end}} {{with .Page.keywords}}
 	<meta name="keywords" content="{{.}}">{{end}}
-	<link rel="alternate" type="application/atom+xml" href="https://sellme.biz/feed/" title="Sellme.biz Feed">
+	<link rel="alternate" type="application/atom+xml" href="https://sellme.biz/feed/" title="Sellme.biz Atom Feed">
+	<link rel="alternate" type="application/json" href="https://sellme.biz/feed.json" title="Sellme.biz JSON feed">
 	<link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
 	<link rel="shortcut icon" href="/favicon.ico?v=1" />
 	<title>{{with .Page.seo_title}}{{.}}{{else}}{{.Page.title}} - {{.Site.Name}}{{if .Page.is_post}}{{end}}{{end}}</title>
@@ -45,7 +46,8 @@
 		<br> &copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a> &#183;
 		<a href="/terms.html">Условия и лицензия</a> &#183;
 		<a href="https://github.com/dchest/sellme.biz">Исходники</a> &#183;
-		<a href="/feed/" class="rss">RSS</a> &nbsp;
+		<a href="/feed/" class="feed rss">RSS</a>
+		<a href="/feed.json" class="feed json">JSON</a> &nbsp;
 
 	</footer>
 {{include "analytics.html"}}
