--- a/layouts/default.html
+++ b/layouts/default.html
@@ -43,8 +43,8 @@
 
 		<a href="https://github.com/dchest">github.com/dchest</a>
 
-		<br> &copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a> &#183;
-		<a href="/terms.html">Условия и лицензия</a> &#183;
+		<br> Написал 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a> &#183;
+		<a href="/terms.html">Условия</a> &#183;
 		<a href="https://github.com/dchest/sellme.biz">Исходники</a> &#183;
 		<a href="/feed/" class="feed rss">RSS</a>
 		<a href="/feed.json" class="feed json">JSON</a> &nbsp;
