--- a/layouts/default.html
+++ b/layouts/default.html
@@ -39,7 +39,7 @@
 
 		<a href="https://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&amp;utm_medium=sidebar_link&amp;utm_campaign=Sellme.biz">Video Mémoires</a>		&#183;
 
-		<a href="https://dchest.com">dchest.com</a>  &#183;
+		<a href="https://dchest.com">dchest.com</a>
 
 		<br> Написал 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a> &#183;
 		<a href="/terms.html">Условия</a> &#183;
